🐛 fix header spacing

--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -15,7 +15,7 @@ header {
 	justify-content: space-between;
 
 	width: 100%;
-	gap: 2rem;
+	gap: var(--space-md);
 	margin-top: var(--header-margin-top);
 	margin-bottom: var(--header-margin-bottom);
 
@@ -30,11 +30,12 @@ header h1 {
 	font-size: var(--text-lg);
 }
 
-header > .component-theme_switcher {
+header .buttons {
+	height: 100%;
+	display: flex;
+	flex-direction: row;
+	gap: var(--space-sm);
 	margin-left: auto;
-}
-header > .component-lang_switcher {
-	margin-left: var(--space-xs);
 }
 
 header:has(~ #main_page_content > main.home) {
